--- a/LatchCommand-JDO/pom.xml
+++ b/LatchCommand-JDO/pom.xml
@@ -6,4 +6,28 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>LatchCommand-JDO</artifactId>
+  <dependencies>
+  	        <dependency>
+            <groupId>javax.jdo</groupId>
+            <artifactId>jdo-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-core</artifactId>
+            <version>(3.9, )</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-api-jdo</artifactId>
+            <version>(3.9, )</version>
+        </dependency>
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>datanucleus-rdbms</artifactId>
+            <version>(3.9, )</version>
+            <scope>runtime</scope>
+        </dependency>
+  </dependencies>
 </project>
